# practical-haskell

./: README.md  cabal.project
chapter2/: CHANGELOG.md  chapter2.cabal
chapter2/src/Chapter2/: DataTypes.hs  Exercises.hs  Records.hs  SimpleFunctions.hs
chapter3/: CHANGELOG.md  chapter3.cabal
chapter3/src/Chapter3/: Exercises.hs  Lists.hs  Ranges.hs
chapter4/: chapter4.cabal
chapter4/src/Chapter4/: Containers.hs
chapter5/: chapter5.cabal  profiling-example.ps
chapter5/app/: Main.hs
chapter5/src/Chapter5/: Exercises.hs
chapter6/: CHANGELOG.md  chapter6.cabal
chapter6/src/Chapter6/: KMeans.hs  Lenses.hs
time-machine/: CHANGELOG.md  time-machine.cabal
time-machine/src/: TimeMachine.hs
