cabal-version:      3.0
name:               chapter3
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Penny Chase
maintainer:         mpchase@mac.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Chapter3.Exercises
        Chapter3.Ranges
        Chapter3.Lists
 
    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
                    , chapter2
    hs-source-dirs:   src
    default-language: Haskell2010


