cabal-version:      3.0
name:               chapter6
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Penny Chase
maintainer:         mpchase@mac.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Chapter6.KMeans
                      Chapter6.Lenses

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
                    , containers
                    , microlens-platform
    hs-source-dirs:   src
    default-language: Haskell2010

executable chapter6
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        chapter6

    hs-source-dirs:   app
    default-language: Haskell2010
